feat: Update NewwwTab 2.0 with new data sources and content
- Added new data source for Theo in manifest.json
- Removed duplicate Theo entry in manifest.json
- Created new apps.md file with a comprehensive list of applications
- Created new groups.md file with various group resources
- Created new mr-softy.md file containing links to AI tools and Google services
- Created new orgs.md file with links to organizational resources
- Created new reads.md file with links to reading platforms and AI resources
- Cleaned up theo.md by removing unnecessary text

--- a/tasks/newwwtab-next/manifest.json
+++ b/tasks/newwwtab-next/manifest.json
@@ -2,14 +2,39 @@
   "title": "NewwwTab 2.0",
   "layout": [
     {
+      "id": "box-theo",
+      "source": "data/theo.md",
+      "title": "Theo"
+    },
+    {
       "id": "box-news",
       "source": "data/news.md",
       "title": "News"
     },
     {
-      "id": "box-theo",
-      "source": "data/theo.md",
-      "title": "Theo"
+      "id": "box-reads",
+      "source": "data/reads.md",
+      "title": "Reads"
+    },
+    {
+      "id": "box-mr-softy",
+      "source": "data/mr-softy.md",
+      "title": "Mr Softy"
+    },
+    {
+      "id": "box-apps",
+      "source": "data/apps.md",
+      "title": "Apps"
+    },
+    {
+      "id": "box-groups",
+      "source": "data/groups.md",
+      "title": "Groups"
+    },
+    {
+      "id": "box-orgs",
+      "source": "data/orgs.md",
+      "title": "Orgs"
     }
   ]
 }
